# libswiprologcpp

./: CMakeLists.txt  README.md  libswiprologcpp.pc.in
src/: prolog.cpp  prolog.hpp
